--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -1,18 +1,18 @@
 {
 "========= PASDT =========": "========= PASDT =========",
 
-"Administrator configuration": "de configuración del administrador",
-"Back to Home": "De vuelta a casa",
+"Administrator configuration": "Configuración del administrador",
+"Back to Home": "Vuelta a casa",
 "Connection restored": "Conexión restaurada",
 "Sign out": "Desconectar",
-"Log monitoring": "monitoreo de registro",
+"Log monitoring": "Monitoreo de registro",
 "Manage my fleet": "Manejar mi flota",
 "New access": "Nuevo acceso",
 "New notifications": "Nuevas notificaciones",
 "Reconnect": "Volver a conectar",
 "Monitoring of the transfo. fleet": "Monitoreo del transformador. flota",
-"Unread notifications": "notificaciones no leídas",
-"The latest data received is displayed. Click this link to refresh the data.": "Se muestran los últimos datos recibidos. Haga clic en este enlace para actualizar los datos .",
+"Unread notifications": "Notificaciones no leídas",
+"The latest data received is displayed. Click this link to refresh the data.": "Se muestran los últimos datos recibidos. Haga clic en este enlace para actualizar los datos.",
 "You are taking control of another company. Click here to return to yours": "Usted está tomando el control de Comentarios otra compañía. Haga clic aquí para volver a la suya",
 "You are disconnected": "Estás desconectado",
 "Disconnected": "Desconectado",
@@ -42,8 +42,8 @@
 "Last anomaly": "Última anomalía",
 "Last anomaly date": "Fecha de la última anomalía",
 "Last refresh": "Última actualización",
-"Last temp.": "Última temperatura .",
-"Last temp. date": "Última temperatura. con fecha de",
+"Last temp.": "Última temp.",
+"Last temp. date": "Última temp. recibida",
 "Light blue": "Claro",
 "Log analysis": "Análisis de registros",
 "Logs": "Registros",
@@ -64,11 +64,11 @@
 "Temperature graphs": "Gráficos de temperatura",
 "Temperature": "Temperatura",
 "Theme": "Tema",
-"This table is refreshed every 5 minutes.": "Esta tabla se actualiza cada 5 minutos .",
+"This table is refreshed every 5 minutes.": "Esta tabla se actualiza cada 5 minutos.",
 
 "========= Client =========": "========= Cliente =========",
 
-"1<sup>st</sup> occurence": "1 <sup> st </ sup> ocurrencia",
+"1<sup>st</sup> occurence": "1° ocurrencia",
 "Actions": "Comportamiento",
 "Active": "Activo",
 "Actual logo": "logotipo real",
@@ -79,7 +79,7 @@
 "Change the logo of": "Cambiare il logo di",
 "Commentary": "Commento",
 "Comment on the alert": "Commento en la alarma",
-"Created the": "Creado té",
+"Created the": "Creado el",
 "Current colors": "colores actuales",
 "during": "durante",
 "Durée": "Duración",
@@ -94,7 +94,7 @@
 "Last log": "Ultimo registro",
 "List of users of your group": "Lista de usuarios de su grupo",
 "List of modules of your group": "Lista de los módulos de su grupo",
-"Modified the": "té modificado",
+"Modified the": "Modificado el",
 "Modify": "Modificar",
 "Modify the colors": "Modificar los colores",
 "Number": "Número",
@@ -113,12 +113,12 @@
 "Solved since the": "Resuelto ya que el",
 "State": "Estado",
 "Subscription": "Suscripción",
-"There has been some problem with your image.": "Ha habido-Algunos problemas con su imagen .",
-"There have been some problems with your colors.": "Hay-han sido-algunos problemas con sus colores .",
-"To add monitoring for a module, contact our team.": "Para añadir el seguimiento de un módulo, toque nuestro equipo .",
+"There has been some problem with your image.": "Ha habido-Algunos problemas con su imagen.",
+"There have been some problems with your colors.": "Hay-han sido-algunos problemas con sus colores.",
+"To add monitoring for a module, contact our team.": "Para añadir el seguimiento de un módulo, toque nuestro equipo.",
 "Type": "Tipo",
 "Update the logo": "Actualizar el logotipo",
-"You must first autorise browser notifications.": "Primero debe permitir que las notificaciones del navegador .",
+"You must first autorise browser notifications.": "Primero debe permitir que las notificaciones del navegador.",
 "Your account is badly configured, contact the administrator.": "Su cuenta está mal configurado, toque el administrador.",
 "Your language preferences have correctly been updated": "Tus preferencias de idioma se han actualizado correctamente.",
 "Your subscription": "Su suscripción",
