--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -10,7 +10,7 @@
 "New access": "Nouvel accès",
 "New notifications": "Nouvelles notifications",
 "Reconnect": "Se reconnecter",
-"Monitoring of the transfo. fleet": "ivi du parc transfo.",
+"Monitoring of the transfo. fleet": "Suivi du parc transfo.",
 "Unread notifications": "Notifications non lues",
 "The latest data received is displayed. Click this link to refresh the data.": "Les dernières données reçues sont affichées. Cliquez sur ce lien pour rafraîchir les données.",
 "You are taking control of another company. Click here to return to yours": "Vous prenez le contrôle d'une autre entreprise. Cliquez ici pour revenir à la vôtre",
