--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -149,8 +149,8 @@
 "for your module": "para su módulo",
 "Module location": "Ubicación del módulo",
 "the portal has detected that it has not received any data from your module since": "portal ha detectado que no ha recibido los datos de su unidad desde entonces",
-"your module triggered the following __CRITICAL__ alert:": "su unidad desencadenó la ALER __CRITICAL__ siguientes iniciales",
-"your module triggered the following alert:": "su desencadenado el módulo de ALER siguientes iniciales",
+"your module triggered the following __CRITICAL__ alert:": "su unidad desencadenó la alerta __CRITICAL__ siguientes iniciales",
+"your module triggered the following alert:": "su desencadenado el módulo de alerta siguientes iniciales",
 "with the value of": "con el valor de",
 "You may need to intervene": "Es posible que tenga que intervenir",
 "You may need to intervene urgently": "Puede que tenga que intervenir con urgencia",
