--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -149,8 +149,8 @@
 "for your module": "per il modulo",
 "Module location": "Posizione del modulo",
 "the portal has detected that it has not received any data from your module since": "il portale ha rilevato che essa non ha ricevuto i dati dal modulo dal",
-"your module triggered the following __CRITICAL__ alert:": "il modulo ha attivato il seguente __AVVISO__ critico:",
-"your module triggered the following alert:": "il modulo ha attivato il seguente critico:",
+"your module triggered the following __CRITICAL__ alert:": "il tuo modulo ha attivato il seguente avviso __CRITICO__:",
+"your module triggered the following alert:": "il tuo modulo ha attivato il seguente avviso:",
 "with the value of": "con il valore di",
 "You may need to intervene": "Potrebbe essere necessario intervenire",
 "You may need to intervene urgently": "Potrebbe essere necessario intervenire con urgenza",
