--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -33,7 +33,6 @@
 "Color code": "Codigo de color",
 "Custom": "Personalizado",
 "Battery color code": "Código de color de la batería",
-"Dark blue": "Azul oscuro",
 "Date": "Con fecha de",
 "Default": "Defecto",
 "Details": "Detalles",
@@ -44,7 +43,6 @@
 "Last refresh": "Última actualización",
 "Last temp.": "Última temp.",
 "Last temp. date": "Última temp. recibida",
-"Light blue": "Claro",
 "Log analysis": "Análisis de registros",
 "Logs": "Registros",
 "Logs color code": "Código de color troncos",
@@ -63,12 +61,21 @@
 "Temperature color code": "Código de color de la temperatura",
 "Temperature graphs": "Gráficos de temperatura",
 "Temperature": "Temperatura",
-"Theme": "Tema",
 "This table is refreshed every 5 minutes.": "Esta tabla se actualiza cada 5 minutos.",
-"Legend": "Leyenda",
-"Normal temperature": "Temperatura normal",
-"High temperature": "Alta temperatura",
+
+"========= Graph ==========": "========= Graph ==========",
+
+":days last days average": "Promedio durante :days días",
+"Average": "Promedio",
 "Critically high temperature": "Temperatura críticamente alta",
+"Dark blue": "Azul oscuro",
+"High temperature": "Alta temperatura",
+"Legend": "Leyenda",
+"Light blue": "Claro",
+"Normal temperature": "Temperatura normal",
+"Projection": "Proyección",
+"Projection :days days in the future": "Proyección :days días en el futuro",
+"Theme": "Tema",
 
 "========= Client =========": "========= Cliente =========",
 
