--- a/resources/lang/de_DE.json
+++ b/resources/lang/de_DE.json
@@ -38,6 +38,7 @@
 "Default": "Standard",
 "Details": "Einzelheiten",
 "Empty the calendar": "Leeren Sie den Kalender",
+"Force refresh": "Aktualisierung erzwingen",
 "Fully supported languages": "Voll unterstützte Sprachen",
 "Last anomaly": "Letzte Anomalie",
 "Last anomaly date": "Letztes Anomaliedatum",
