--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -37,6 +37,7 @@
 "Default": "Defecto",
 "Details": "Detalles",
 "Empty the calendar": "Vaciar el calendario",
+"Force refresh": "Forzar actualización",
 "Fully supported languages": "Idiomas totalmente compatibles",
 "Last anomaly": "Última anomalía",
 "Last anomaly date": "Fecha de la última anomalía",
