--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -37,6 +37,7 @@
 "Default": "Défaut",
 "Details": "Détails",
 "Empty the calendar": "Vider le calendrier",
+"Force refresh": "Forcer le rafraîchissement",
 "Fully supported languages": "Langues entièrement prises en charge",
 "Last anomaly": "Dernière anomalie",
 "Last anomaly date": "Date de dernière anomalie",
