--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -38,6 +38,7 @@
 "Default": "Predefinito",
 "Details": "Dettagli",
 "Empty the calendar": "Svuotare il calendario",
+"Force refresh": "Forza aggiornamento",
 "Fully supported languages": "Lingue completamente supportate",
 "Last anomaly": "Ultima anomalia",
 "Last anomaly date": "Data ultima anomalia",
