--- a/resources/lang/nl_NL.json
+++ b/resources/lang/nl_NL.json
@@ -38,6 +38,7 @@
 "Default": "Standaard",
 "Details": "Details",
 "Empty the calendar": "Maak de kalender leeg",
+"Force refresh": "Forceer vernieuwing",
 "Fully supported languages": "Volledig ondersteunde talen",
 "Last anomaly": "Laatste anomalie",
 "Last anomaly date": "Datum laatste anomalie",
