compat IE + css input client

--- a/resources/lang/de_DE.json
+++ b/resources/lang/de_DE.json
@@ -82,6 +82,7 @@
 "Add a subscription": "Abonnement hinzufügen",
 "Change the language": "Ändere die Sprache",
 "Change the logo of": "Ändern Sie das Logo von",
+"Choose file": "Wähle eine Datei aus",
 "Commentary": "Kommentar",
 "Comment on the alert": "Kommentieren Sie die Warnung",
 "Created the": "Erstellt die",
