--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -89,6 +89,7 @@
 "Add a subscription": "Agregar una suscripción",
 "Change the language": "Cambia la lingua",
 "Change the logo of": "Cambiare il logo di",
+"Choose file": "Escoge un archivo",
 "Commentary": "Commento",
 "Comment on the alert": "Commento en la alarma",
 "Created the": "Creado el",
