--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -83,11 +83,12 @@
 "1<sup>st</sup> occurence": "1<sup>ère</sup> occurence",
 "Actions": "Actions",
 "Active": "Actif",
-"Actual logo": "Actual logo",
+"Actual logo": "Logo actuel",
 "Activate mails": "Activer les mails",
 "Activate notifications (keep this tab open)": "Activer les notifications (gardez cet onglet ouvert)",
 "Add a subscription": "Ajouter un abonnement",
 "Change the language": "Changer la langue",
+"Choose file": "Choisir un fichier",
 "Change the logo of": "Changer le logo de",
 "Commentary": "Commentaire",
 "Comment on the alert": "Commentaire sur l'alerte",
