--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -96,6 +96,7 @@
 "Add a subscription": "Aggiungere un abbonamento",
 "Change the language": "Cambia la lingua",
 "Change the logo of": "Cambiare il logo di",
+"Choose file": "Scegli un file",
 "Commentary": "Commento",
 "Comment on the alert": "Commento in allerta",
 "Created the": "creato il",
