--- a/resources/lang/nl_NL.json
+++ b/resources/lang/nl_NL.json
@@ -82,6 +82,7 @@
 "Add a subscription": "Voeg een abonnement toe",
 "Change the language": "Verander de taal",
 "Change the logo of": "Verander het logo van",
+"Choose file": "Kies een bestand",
 "Commentary": "Commentaar",
 "Comment on the alert": "Reageer op de waarschuwing",
 "Created the": "Gemaakt de",
