locale js singleton

--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -95,7 +95,7 @@
 "Created the": "Créé le",
 "Current colors": "Couleurs actuelles",
 "during": "pendant",
-"Durée": "Duration",
+"Duration": "Durée",
 "Edit the comment": "&Eacute;diter le commentaire",
 "Edit the account": "Editer le compte",
 "Failed to post your comment.": "L'envoi du commentaire n'a pas fonctionné.",
