added empty monthly report div

--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -137,6 +137,15 @@
 "Your subscription": "Votre abonnement",
 "Value": "Valeur",
 
+"========= Client report =========": "========= Client report =========",
+
+"Filename": "Nom du fichier",
+"Month": "Mois",
+"Monthly reports": "Rapports mensuels",
+"November": "Novembre",
+"October": "Octobre",
+"Download": "Télécharger",
+
 "========= Datetime =========": "========= Datetime =========",
 
 ":": ":",
