--- a/resources/lang/de_DE.json
+++ b/resources/lang/de_DE.json
@@ -222,6 +222,8 @@
 "Add additional security to your account using two factor authentication.":"Fügen Sie Ihrem Konto zusätzliche Sicherheit hinzu, indem Sie die Zwei-Faktor-Authentifizierung verwenden.",
 "Add Team Member": "Teammitglied hinzufügen",
 "Add": "Hinzufügen",
+"Add company" : "Firma hinzufügen",
+"Add user" : "Benutzer hinzufügen",
 "Added.": "Hinzugefügt.",
 "Administrator users can perform any action.": "Administratoren können jede Aktion durchführen.",
 "Administrator": "Administrator",
@@ -299,6 +301,7 @@
 "Not Found": "Nicht gefunden",
 "of": "von",
 "Oh no": "Oh nein",
+"Or" : "Oder",
 "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Sobald ein Team gelöscht wird, werden alle Ressourcen und Daten dauerhaft gelöscht. Laden Sie vor dem Löschen dieses Teams alle Daten oder Informationen zu diesem Team herunter, die Sie behalten möchten.",
 "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Sobald Ihr Konto gelöscht wurde, werden alle Ressourcen und Daten dauerhaft gelöscht. Laden Sie vor dem Löschen Ihres Kontos alle Daten oder Informationen herunter, die Sie behalten möchten.",
 "Page Expired": "Seite abgelaufen",
