--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -228,7 +228,9 @@
 "Add": "Agregar",
 "Add a new team member to your team, allowing them to collaborate with you.": "Agregue un nuevo miembro a su equipo, lo que le permitirá colaborar con usted.",
 "Add additional security to your account using two factor authentication.": "Agregue seguridad adicional a su cuenta mediante la autenticación de dos factores.",
+"Add company" : "Agregar empresa",
 "Add Team Member": "Agregar miembro al equipo",
+"Add user" : "Agregar usuario",
 "Added.": "Agregado.",
 "Administrator": "Administrador",
 "Administrator users can perform any action.": "Los administradores pueden realizar cualquier acción.",
@@ -308,6 +310,7 @@
 "Oh no": "Ay no",
 "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Una vez que se elimina un equipo, todos sus recursos y datos se eliminarán de forma permanente. Antes de eliminar este equipo, descargue cualquier dato o información sobre este equipo que desee conservar.",
 "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una vez su cuenta sea borrada, todos sus recursos y datos se eliminarán de forma permanente. Antes de borrar su cuenta, por favor descargue cualquier dato o información que desee conservar.",
+"Or" : "O",
 "Page Expired": "Página Expirada",
 "Page Not Found": "Página no encontrada",
 "Pagination Navigation": "Navegación por los enlaces de paginación",
