--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -94,6 +94,8 @@
 "Activate mails": "mail Attiva",
 "Activate notifications (keep this tab open)": "Notifiche attiva (mantenere questa scheda aperta)",
 "Add a subscription": "Aggiungere un abbonamento",
+"Add company" : "Aggiungi azienda",
+"Add user" : "Aggiungi utente",
 "Change the language": "Cambia la lingua",
 "Change the logo of": "Cambiare il logo di",
 "Choose file": "Scegli un file",
@@ -315,6 +317,7 @@
 "Oh no": "Oh no",
 "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "Una volta eliminato un team, tutte le sue risorse e i relativi dati verranno eliminati definitivamente. Prima di eliminare questo team, scarica tutti i dati o le relative informazioni che desideri conservare.",
 "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una volta eliminato il tuo account, tutte le sue risorse e i relativi dati verranno eliminati definitivamente. Prima di eliminarlo, scarica tutti i dati o le informazioni che desideri conservare.",
+"Or" : "O",
 "Page Expired": "Pagina scaduta",
 "Page Not Found": "Pagina non trovata",
 "Pagination Navigation": "Navigazione della Paginazione",
