--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -237,7 +237,9 @@
 "Add a new team member to your team, allowing them to collaborate with you." : "Ajoutez un nouveau membre de l'équipe à votre équipe, permettant de collaborer avec vous.",
 "Add additional security to your account using two factor authentication." : "Ajoutez une sécurité supplémentaire à votre compte en utilisant l'authentification à deux facteurs.",
 "Add Team Member" : "Ajoutez un membre d'équipe",
-"Add" : "Ajoutez",
+"Add" : "Ajouter",
+"Add company" : "Ajouter une entreprise",
+"Add user" : "Ajouter un utilisateur",
 "Added." : "Ajouté",
 "Administrator" : "Administrateur",
 "Administrator users can perform any action." : "Les administrateurs peuvent faire n'importe quelle action.",
@@ -248,6 +250,7 @@
 "API Token" : "Jeton API",
 "API tokens allow third-party services to authenticate with our application on your behalf." : "Les jetons API permettent à des services tiers de s'authentifier auprès de notre application en votre nom.",
 "API Tokens" : "Jeton API",
+"Are you sure" : "Êtes-vous sûr",
 "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted." : "Êtes-vous sûr de vouloir supprimer cette équipe ? Lorsqu'une équipe est supprimée, toutes les ressources et données associées seront supprimées de manière définitive.",
 "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account." : "Êtes-vous sûr de vouloir supprimer votre compte ? Une fois que votre compte est supprimé, toutes les données associées seront supprimées définitivement. Pour confirmer que vous voulez supprimer définitivement votre compte, renseignez votre mot de passe.",
 "Are you sure you would like to delete this API token?" : "Êtes-vous sûr de vouloir supprimer ce jeton API ?",
@@ -309,6 +312,7 @@
 "Manage API Tokens" : "Gérer les jetons API",
 "Manage Role" : "Gérer le rôle",
 "Manage Team" : "Gérer l'équipe",
+"Modify or delete" : "Modifier ou supprimer",
 "Name": "Nom",
 "Nevermind" : "Peu importe",
 "New Password" : "Nouveau mot de passe",
@@ -317,6 +321,7 @@
 "Oh no": "Oh non",
 "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain." : "Une fois qu'une équipe est supprimée, toutes ses données seront supprimées définitivement. Avant de supprimer cette équipe, veuillez télécharger toutes données ou informations de cette équipe.",
 "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain." : "Une fois que votre compte est supprimé, toutes vos données sont supprimées définitivement. Avant de supprimer votre compte, veuillez télécharger vos données.",
+"Or" : "Ou",
 "Page Expired": "Page expirée",
 "Page Not Found": "Page introuvable",
 "Pagination Navigation": "Pagination",
@@ -407,6 +412,7 @@
 "Whoops! Something went wrong." : "Oups ! Un problème est survenu.",
 "Whoops!": "Oups !",
 "Whoops, something went wrong on our servers.": "Oups, une erreur s'est produite sur nos serveurs.",
+"You are about to" : "Vous êtes sur le point de",
 "You are logged in!": "Vous êtes connecté !",
 "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet email car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
 "You have enabled two factor authentication." : "Vous avez activé la double authentification.",
