send mail per modules

--- a/resources/lang/de_DE.json
+++ b/resources/lang/de_DE.json
@@ -110,6 +110,7 @@
 "Occurences": "Vorkommen",
 "Ongoing since the": "Laufend seit dem",
 "Refresh the page or contact the administrator.": "Aktualisieren Sie die Seite oder wenden Sie sich an den Administrator.",
+"Recevie mails": "Mails erhalten",
 "Revoke": "Widerrufen",
 "See the related alerts": "Siehe die zugehörigen Warnungen",
 "See the generated email": "Siehe die generierte E-Mail",
