--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -117,6 +117,7 @@
 "Occurences": "Ocurrencias",
 "Ongoing since the": "En curso desde el",
 "Refresh the page or contact the administrator.": "Actualizar la página o contactar con el administrador.",
+"Receive mails": "Recibir correos",
 "Revoke": "Revocar",
 "See the related alerts": "Ver las alertas relacionadas",
 "See the generated email": "Ver el correo electrónico generado",
