--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -117,6 +117,7 @@
 "Occurences": "Occurences",
 "Ongoing since the": "En cours depuis le",
 "Refresh the page or contact the administrator.": "Actualisez la page ou contactez l'administrateur.",
+"Receive mails": "Recevoir des mails",
 "Revoke": "R&eacute;voquer",
 "See the related alerts": "Voir les alertes associées",
 "See the generated email": "Voir le mail généré",
