--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -125,6 +125,7 @@
 "Ongoing since the": "In corso dal momento che la",
 "Refresh the page or contact the administrator.": "Aggiornare la pagina o contattare l'amministratore.",
 "Revoke": "Revocare",
+"Receive mails": "Ricevere mail",
 "See the related alerts": "Vedere i relativi avvisi",
 "See the generated email": "Vedere l'e-mail generata",
 "Seen": "Visto",
