--- a/resources/lang/nl_NL.json
+++ b/resources/lang/nl_NL.json
@@ -110,6 +110,7 @@
 "Occurences": "Voorvallen",
 "Ongoing since the": "Lopend sinds de",
 "Refresh the page or contact the administrator.": "Vernieuw de pagina of neem contact op met de beheerder.",
+"Receive mails": "Mails ontvangen",
 "Revoke": "Intrekken",
 "See the related alerts": "Zie de gerelateerde waarschuwingen",
 "See the generated email": "Zie de gegenereerde e-mail",
