alertes_custom ok

--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -138,7 +138,7 @@
 "Your subscription": "Votre abonnement",
 "Value": "Valeur",
 
-"========= Client report =========": "========= Client report =========",
+"========= Client report =========": "========= Rapport Client =========",
 
 "Filename": "Nom du fichier",
 "Month": "Mois",
@@ -146,6 +146,38 @@
 "November": "Novembre",
 "October": "Octobre",
 "Download": "Télécharger",
+
+"========= Client Module Customization =========": "========= Paramétrage des modules Client =========",
+
+"BATTERY_LOW": "Batterie faible",
+"BATTERY_HIGH": "Batterie en surtension",
+"BATTERY_CRIT_LOW": "Batterie CRITIQUEMENT faible",
+"BATTERY_CRIT_HIGH": "Batterie en surtension critique",
+"NO_BATTERY": "Pas de batterie",
+"NO_LOG": "Déconnecté",
+"NO_TEMP": "Pas de température",
+"TEMP_DECREASE": "Diminution de la température",
+"TEMP_INCREASE": "Augmentation de la température",
+"TEMP_LOW": "Batterie faible",
+"TEMP_HIGH": "Température haute",
+"TEMP_CRIT_LOW": "Température CRITIQUEMENT basse",
+"TEMP_CRIT_HIGH": "Température CRITIQUEMENT haute",
+"Mininimum battery voltage before triggering an alert": "Tension minimale de la batterie avant de déclencher une alerte",
+"Mininimum battery voltage before triggering a CRITICAL alert": "Tension minimale de la batterie avant de déclencher une alerte CRITIQUE",
+"Maximum battery voltage before triggering an alert": "Tension maximale de la batterie avant de déclencher une alerte",
+"Maximum battery voltage before triggering a CRITICAL alert": "Tension maximale de la batterie avant de déclencher une alerte CRITIQUE",
+"Minimum temperature before triggering an alert": "Température minimale avant de déclencher une alerte",
+"Minimum temperature before triggering a CRITICAL alert": "Température minimale avant de déclencher une alerte CRITIQUE",
+"Maximum temperature before triggering an alert": "Température maximale avant de déclencher une alerte",
+"Maximum temperature before triggering a CRITICAL alert": "Température maximale avant de déclencher une alerte CRITIQUE",
+"Maximum temperature decrease compared to previous data before triggering an alert": "Diminution maximale de la température par rapport aux données précédentes avant de déclencher une alerte",
+"Maximum temperature increase compared to previous data before triggering an alert": "Augmentation maximale de la température par rapport aux données précédentes avant de déclencher une alerte",
+"List of battery values considered incorrect (separate with a comma)": "Liste des valeurs de batterie considérées incorrectes (séparées par une virgule)",
+"List of temperature values considered incorrect (separate with a comma)": "Liste des valeurs de température considérées incorrectes (séparées par une virgule)",
+"Minutes without receiving data before triggering an alert": "Minutes sans recevoir de données avant de déclencher une alerte",
+"List": "Liste",
+"Customize": "Paramétrer",
+"Module thresholds": "Seuils du module",
 
 "========= Datetime =========": "========= Datetime =========",
 
